Refactored conditional rendering in components that used it, edited font-sizes for better readability on mobile, bug-fixed app crashing due to graphs not re-rendering, cleaned CSS.

--- a/client/src/components/loading/Loading.css
+++ b/client/src/components/loading/Loading.css
@@ -1,7 +1,7 @@
 .loadingwrapper {
   display         : flex;
   width           : 100%;
-  height          : 100%;
+  max-height      : 100%;
   justify-content : center;
 }
 
