--- a/client/src/components/weatherbar/WeatherBar.css
+++ b/client/src/components/weatherbar/WeatherBar.css
@@ -53,7 +53,7 @@
 @media
   (max-width : 550px) {
   .weatherbar {
-    font-size : 0.9em;
+    font-size : 0.7em;
   }
 }
 
@@ -61,6 +61,6 @@
 @media
   (max-width : 450px) {
   .weatherbar {
-    font-size: 0.8em;
+    font-size: 0.6em;
   }
 }
